kube/countryle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countryle
  labels:
    app: countryle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: countryle
  template:
    metadata:
      labels:
        app: countryle
    spec:
      containers:
      - name: countryle
        image: kingbrady/countryle:2.0.2
        ports:
        - containerPort: 80
