kube/countryle/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: countryle
  namespace: countryle
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: countryle
  type: ClusterIP
